# NoisySynth

./: ARCHITECTURE_OVERVIEW.txt  README.md  SoundDesignGuide.md  gradlew  settings.gradle  technical_details.md
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SynthEngine.cpp  SynthEngine.h  native-lib.cpp
app/src/main/java/com/example/noisysynth/: MainActivity.kt  SynthEngine.kt
app/src/main/java/com/example/noisysynth/ui/: ArpeggiatorTab.kt  EffectsTab.kt  EnvelopeTab.kt  FilterEnvelopeTab.kt  FilterTab.kt  HardwareControls.kt  HardwareModules.kt  HardwareSynthDemo.kt  LFOTab.kt  ModulePanel.kt  OscillatorTab.kt  ParamSlider.kt  SequencerTab.kt  SimpleKeyboard.kt  SimplePianoKeyboard.kt  SynthHeader.kt  SynthScreen.kt  SynthScreenLandscape.kt  SynthScreenModular.kt
app/src/main/java/com/example/noisysynth/ui/theme/: Theme.kt
app/src/main/res/values/: strings.xml  themes.xml
